gcc/testsuite/g++.dg/ext/max.C
@@ -1,0 +1,6 @@
+struct s_t { 
+};
+void foo(void) {
+  s_t s; int i;
+  s<?=i; // { dg-error "" }
+}
